[package]
name = "pallet-kitties"
version = "0.1.0"
authors = ["fbielejec"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

frame-support = { git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1', version = '4.0.0-dev', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1', version = '4.0.0-dev', default-features = false }
sp-io = {git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1', version = "4.0.0-dev", default-features = false }
sp-runtime =  { git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1', version = '4.0.0-dev', default-features = false }
sp-std = {git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1', version = "4.0.0-dev", default-features = false }

# test dependencies
[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1', version = "4.0.0-dev" }
pallet-balances = {git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1', version = "4.0.0-dev" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-std/std",        
 	"sp-runtime/std",
]
